# mcp-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bedrock_agent.py  claude_desktop_config.json  justfile  main.py  pyproject.toml  search_agent.ipynb
aws_bedrock_agentcore/: dummy_agent.py
mcp-server/: search-mcp.py
mcp-server/prompts/: extract_structured_data.md  generate_documentation.md  report_path_type_check.md  system_instructions.md  write_post_summary.md  write_posts_summary.md  write_s3_file_summary.md  write_summary.md
scripts/: delete_bucket_versions.py
tf/data/: prompt.jsonl
tf/glue/: .terraform.lock.hcl  README.md  data.tf  iam.tf  locals.tf  main.tf  providers.tf  variables.tf
tf/glue/data/events/: 1.csv  2.csv  3.csv
tf/glue/files/: state_machine.json.tpl
tf/glue/lambda/: construct.py
tf/glue/scripts/: transform_events.py
tf/modules/buckets/: main.tf  outputs.tf  providers.tf  variables.tf
tf/modules/queue/: main.tf  outputs.tf  providers.tf  variables.tf
tf/modules/triggers/: main.tf  providers.tf  variables.tf
tf/modules/triggers/lambda/: sfn_trigger_lambda.py
tf/modules/workflow/: main.tf  outputs.tf  variables.tf
tf/modules/workflow/files/: state_machine.json.tpl
tf/workflow/iam/: data.tf  locals.tf  main.tf  outputs.tf  providers.tf
tf/workflow/infrastructure/: .terraform.lock.hcl  data.tf  locals.tf  main.tf  providers.tf
tf/workflow_orchestrator/: .terraform.lock.hcl  README.md  iam.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  workflow.py
tf/workflow_orchestrator/sql/: queries.sql
