[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.6.0",
    "boto3>=1.42.79",
    "crewai-tools>=1.6.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "langchain[openai]>=1.2.15",
    "langgraph>=1.1.6",
    "mcp[cli]>=1.26.0",
    "openai>=2.30.0",
    "openai-agents>=0.13.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.8",
    "strands-agents-tools>=0.4.1",
    "strands-agents[openai]>=1.35.0",
]

[dependency-groups]
lint = [
    "ruff>=0.15.8",
]
